# mlops-mentor

./: .env.template  .gitignore  Makefile  README.md  leaderboard.Dockerfile  pyproject.toml
src/mlops_mentor/: __init__.py  run.py
src/mlops_mentor/common/: __init__.py  data.py  models.py
src/mlops_mentor/leaderboard/: app.py
src/mlops_mentor/llm_judge/: __init__.py  judge.py  main.py  models.py  utils.py
src/mlops_mentor/scraper/: __init__.py  main.py  models.py  scraper.py
