[project]
name = "mlops-mentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rasmus Aagaard", email = "rasmus.aagaard@laerdal.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "gradio>=5.23.1",
    "loguru>=0.7.3",
    "markdown2>=2.5.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.24.0",
    "requests>=2.32.5",
    "typer>=0.20.0",
]

[project.scripts]
mlops-mentor = "mlops_mentor:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
